<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="480dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/rounded_corner"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/profilename"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/id_username"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/detil_username"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/id_follower"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:text="@string/detil_follower"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/id_following"
        app:layout_constraintEnd_toStartOf="@+id/id_following"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/id_following" />

    <TextView
        android:id="@+id/id_following"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/detil_following"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/id_username"
        app:layout_constraintStart_toStartOf="@+id/id_username"
        app:layout_constraintTop_toBottomOf="@+id/id_username" />

    <TextView
        android:id="@+id/id_repo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:text="@string/detil_repository"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/id_following"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_following"
        app:layout_constraintTop_toTopOf="@+id/id_following" />

    <TextView
        android:id="@+id/id_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detil_company"
        app:layout_constraintEnd_toEndOf="@+id/id_following"
        app:layout_constraintStart_toStartOf="@+id/id_following"
        app:layout_constraintTop_toBottomOf="@+id/id_following" />

    <TextView
        android:id="@+id/id_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detil_location"
        app:layout_constraintEnd_toEndOf="@+id/id_company"
        app:layout_constraintStart_toStartOf="@+id/id_company"
        app:layout_constraintTop_toBottomOf="@+id/id_company" />

</androidx.constraintlayout.widget.ConstraintLayout>